letal cuali updated

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,13 +1,9 @@
 # Lo observado 
 
-Nos complace presentarles el primer número del Boletín del Observatorio de Prensa del Observatorio Venezolano de Violencia (OVV). Este Boletín es el esfuerzo del trabajo de recolección, sistematización, análisis e interpretación de las noticias de sucesos violentos reportados en la prensa escrita y digital tanto estadal como nacional, por los 15 equipos de trabajo que hacen parte de las sedes de los Observatorios Regionales presentes en los estados: Amazonas Aragua, Bolívar, Carabobo Falcón, Guárico, Lara, Mérida, Monagas, Nueva Esparta, Región Capital, Sucre, Táchira, Trujillo y Zulia.
+La observación y análisis de los datos obtenidos por el Observatorio de Prensa, de las noticias aparecidas en los medios consultados en el primer semestre del año 2021, permiten presentar las diferentes expresiones de la violencia interpersonal y su caracterización, como parte de los cambios sociales que experimenta la sociedad venezolana, debido a la situación económica, política y a aquellos generados por la pandemia producida por la presencia del covid-19.
 
-La información que aquí presentamos corresponde a los sucesos de violencia interpersonal reportados por la prensa durante el primer semestre del año 2021, y procesados bajo una metodología de trabajo que implica la organización de la información recabada, en un instrumento cuyas preguntas pretenden caracterizar los delitos, para posteriormente ser catalogados, de acuerdo con la Clasificación Internacional de Delitos con Fines Estadísticos de la Oficina de las Naciones Unidas contra la Droga y el Delito [@UNODC2015].
+Esta caracterización muestra tendencias que hacen pensar en algunos cambios que se han producido en los delitos violentos cometidos durante el primer semestre de año 2021, en comparación con el mismo periodo del año 2020. La cobertura de la prensa en las diferentes sedes del OVV aporta información que da cuenta de la disminución de los homicidios intencionales, y el aumento de otros delitos menos letales como las agresiones y los robos. La violencia delincuencial produce más víctimas que la violencia por intervención policial y siguen siendo los hombres jóvenes los más afectados por esta violencia, en lugares fuera del hogar; aunque no hay que desestimar el aumento del números de mujeres jóvenes, niñas y adolescentes víctimas tanto de feminicidios como de violaciones sexuales y otro tipo de agresiones sexuales, dentro del ámbito del hogar.
 
-La observación y análisis de los datos obtenidos por el Observatorio de Prensa permiten presentar las diferentes expresiones de la violencia interpersonal y su caracterización, como parte de los cambios sociales que experimenta la sociedad venezolana, debido a la situación económica, política y a aquellos generados por la pandemia producida por la presencia del covid-19.
+Las medidas de confinamiento y desmovilización de la población, han hecho lo propio para propiciar el recrudecimiento de los conflictos familiares, lo que ha afectado las relaciones entre sus miembros, al punto de incitar hechos de violencia que prácticamente mantiene en convivencia al sexo femenino con su principales victimarios que son miembros de la familia, siendo en la mayoría de los casos esposo, ex esposo, padres, abuelos, aumentando los casos reportados de feminicidios, así como violaciones y agresiones sexuales. Aunado a ello existe desconocimiento por un lado, y falta de apoyo por el otro, a las víctimas de estos delitos, que hacen más difícil el control y registro de este tipo de delitos.
 
-Esta caracterización muestra tendencias que hacen pensar en algunos cambios que se han producido en los delitos violentos cometidos durante el primer semestre del año 2021, en comparación con el mismo periodo del año 2020. La cobertura de la prensa en las diferentes sedes del OVV aporta información que da cuenta de la disminución de los homicidios intencionales, y el aumento de otros delitos menos letales como las agresiones y los robos. La violencia delincuencial produce más víctimas que la violencia por intervención policial y siguen siendo los hombres jóvenes los más afectados por esta violencia, en lugares fuera del hogar; aunque no hay que desestimar el aumento del número de mujeres jóvenes, niñas y adolescentes víctimas tanto de feminicidios como de violaciones sexuales y otro tipo de agresiones sexuales, dentro del ámbito del hogar.
-
-Las medidas de confinamiento y desmovilización de la población, han hecho lo propio para propiciar el recrudecimiento de los conflictos familiares, lo que ha afectado las relaciones entre sus miembros, al punto de incitar hechos de violencia que prácticamente mantienen en convivencia al sexo femenino con sus principales victimarios que son miembros de la familia, siendo en la mayoría de los casos esposo, ex esposo, padres, abuelos, aumentando los casos reportados de feminicidios, así como violaciones y agresiones sexuales. Aunado a ello existe desconocimiento por un lado, y falta de apoyo por el otro, a las víctimas de estos delitos, que hacen más difícil el control y registro de este tipo de delitos.
-
-Una hipótesis para explicar estas tendencias en el comportamiento de la violencia, sin duda tiene que ver con la intensificación de la emergencia humanitaria compleja, como consecuencia de la mezcla de desigualdades sociales, violencia y conflictos sociales, inestabilidad política y una pobreza extrema, que crean un caldo de cultivo para la comisión de delitos como robos, homicidios, extorsiones, agresiones violencia intrafamiliar, entre otros, además de la violencia estructural producida por la precariedad de los servicios públicos y las acciones de omisión y ausencia de políticas públicas que profundizan la crisis humanitaria y viola los derechos humanos de los ciudadanos.
+Una hipótesis para explicar estas tendencias en el comportamiento de la violencia, que apunta hacia el incremento de casos de violencia que ocurren en ambientes cerrados y privados y disminución de hechos violentos en lugares abiertos y públicos, sin duda tiene que ver, a pesar de los conflictos sociales e inestabilidad política, con factores como la migración de venezolanos a otros países, la destrucción de la economía y del trabajo, las medidas de confinamiento producto de la cuarentena por la pandemia del covid-19, la reducción de delincuentes producto de acciones extrajudiciales por parte de organismos de seguridad, las oportunidades de delitos a pequeñas escalas y más discretas dada la dolarización de actividades económicas, tanto en pequeños comercios como en la economía informal [@LACSO-OVV2020]. A todo ello se suma la violencia estructural producida por la precariedad de los servicios públicos y las acciones de omisión y ausencia de políticas públicas que profundizan la crisis humanitaria y viola los derechos humanos de los ciudadanos.
