--- a/02-violencialetal.Rmd
+++ b/02-violencialetal.Rmd
@@ -2,7 +2,7 @@
 
 ## Homicidio intencional
 
-Entendiendo el homicidio intencional como la “muerte ilícita causada a una persona con la intención de causarle la muerte u ocasionarle lesiones graves” [@UNODC2015,19], no cabe duda de que este delito sigue siendo de los más graves que se cometen y son reportados por la prensa. Así puede observarse en la gráfica \@ref(fig:victimasdelhisexoedadpir) que este delito discriminado por edad y sexo nos muestra lo que ha sido una tendencia en el país y en Latinoamérica, y son las muertes de hombres jóvenes menores de 30 años, pero también puede notarse que durante el periodo en estudio fueron recogidos mayoritariamente por la prensa el homicidio al sexo femenino en edades entre 11 y 25 años, fundamentalmente el grupo entre adolescentes de 11 a 15 años. Y aunque con las menores proporciones también sucedió con octogenarias y menores de 1 año de edad. 
+Entendiendo el homicidio intencional como la “muerte ilícita causada a una persona con la intención de causarle la muerte u ocasionarle lesiones graves” [@UNODC2015,19], no cabe duda de que este delito sigue siendo de los más graves que se cometen y son reportados por la prensa consultada. Para este primer semestre del año 2021 la prensa nacional y regional consultada, registró un total de 652 muertes por homicidio intencional, de los cuales sólo se tuvo información sobre edad y sexo en 468 casos. Así puede observarse en el Gráfico \@ref(fig:victimasdelhisexoedadpir) que este delito discriminado por edad y sexo muestra lo que ha sido una tendencia en el país y en Latinoamérica, y son las muertes de hombres jóvenes menores de 30 años, pero también puede notarse que durante el periodo en estudio fueron recogidos mayoritariamente por la prensa el homicidio al sexo femenino en edades entre 11 y 25 años, fundamentalmente el grupo entre adolescentes de 11 a 15 años. Y aunque con las menores proporciones también sucedió con octogenarias y menores de 1 año de edad. 
 
 ```{r victimasmilpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasmil_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
@@ -28,7 +28,7 @@ knitr::include_graphics(c("images/victimasdelhi_piramide.png"))
 # plot(sucesospol_barras)
 ```
 
-Esto merece atención por cuanto al ver en el grafico \@ref(fig:victimasdelhimotiv), las motivaciones para estos delitos discriminados por sexo, nos muestra que las causas reportadas para el caso de las mujeres, son las que tienen que ver con el género, y otras motivaciones, entre las cuales se menciona los conflictos intrafamiliares; mientras que para los hombres predominan como motivaciones los ajustes de cuentas, el provecho ilícito, la venganza.
+Esto merece atención por cuanto al ver en el Gráfico \@ref(fig:victimasdelhimotiv), las motivaciones para estos delitos discriminados por sexo, nos muestra que en los 446 donde se pudo obtener esta información, las causas reportadas para el caso de las mujeres, son las que tienen que ver con el género, y otras motivaciones, entre las cuales se menciona los conflictos intrafamiliares; mientras que para los hombres predominan como motivaciones los ajustes de cuentas, el provecho ilícito y la venganza. Se pone en evidencia entonces el hecho de que dado que las mujeres están más tiempo en casa por el rol que socialmente le ha sido asignado, se encuentra en mayor riesgo de ser victimizada dentro del hogar, al contrario de lo que sucede con el sexo masculino, quien ejerce sus funciones fundamentalmente fuera del hogar.
 
 (ref:victimasdelmotiv) Número víctimas por homicidio intencional discriminadas según el sexo y la motivación del delito.
 
@@ -43,7 +43,7 @@ knitr::include_graphics(c("images/victimasdelhimotiv_graf.png"))
 
 ## Muertes por intervención policial (MIP)
 
-Las muertes por intervención policial informadas durante este semestre (gráfico \@ref(fig:victimasmilsexoedadpir)), en los reportes de prensa consultados, alcanzan más de 60 víctimas masculinas en edades comprendidas entre 20 y 30 años, aunque llama la atención que también se reportaron víctimas de menos de un año y de 70 años, que, aunque en mucha menor proporción, intriga la muerte de varones de esas edades en manos de la policía. La muerte de mujeres en manos de la policía es mucho menor que los hombres, siendo las víctimas mayores de 20 años las más afectadas. Allí se puede apreciar, que las muertes violentas producto de HI casi se duplican mientras que la letalidad policial, prácticamente, permanece invariable hasta el momento.
+Las muertes por intervención policial informadas durante el primer semestre  del 2021, en los reportes de prensa consultados, alcanzan un total de 562 víctimas (gráfico \@ref(fig:victimasmilsexoedadpir)). Sin embargo, de ese total la prensa solo mencionó en 207 casos información de edad y sexo de las víctimas, entre las cuales 60 son de sexo masculino, en edades comprendidas entre 20 y 30 años, aunque llama la atención que también se reportaron víctimas de menos de un año y de 70 años, que, aunque en mucha menor proporción, intriga la muerte de varones de esas edades en manos de la policía. La muerte de mujeres por funcionarios policiales es mucho menor que los hombres, siendo las víctimas mayores de 20 años las más afectadas. Las cifras de víctimas del sexo femenino es inferior, y puede deberse a que  son las menos expuestas, aunque el hecho de que sean mayores de 20 años, pueden dar cuenta de víctimas que se mueven fuera del hogar por razones de trabajo o estudio, o son victimizadas por policías por estar en involucradas en delitos o estar en lugares cercanos donde funcionarios policiales realizaron sus acciones.
 
 ```{r sucesospolbarras, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("sucesospolBarras.R", echo = F,local = knitr::knit_global())
@@ -59,7 +59,7 @@ knitr::include_graphics(c("images/victimasmilsexoedad_piramide.png"))
 # plot(sucesospol_barras)
 ```
 
-El desglose de los organismos policiales vinculados a los homicidios reportados en prensa (gráfico \@ref(fig:sucesosmil)), indica que en por lo menos 160 sucesos conocidos, estuvo involucrada la policía estadal en 35%, seguidos por la PNB y el CICPC en casi 100 casos cada uno, para un 20% respectivamente, siendo los cuerpos menos involucrados la policía municipal y las FANB.
+El desglose de los organismos policiales vinculados a los homicidios reportados en prensa (gráfico \@ref(fig:sucesosmil)), indica que en los 465 casos conocidos, por lo menos en 160 sucesos, estuvo involucrada la policía estadal con 35%, seguidos por la PNB y el CICPC en casi 100 casos cada uno, para un 20% respectivamente, siendo los cuerpos menos involucrados la policía municipal y las FANB. Aquí puede apreciarse como ha disminuido el protagonismo de la PNB, especialmente del grupo FAES, quien ha recibido innumerables acusaciones y denuncias tanto dentro del territorio nacional, como a nivel internacional sobre todo por las denuncias en los informes de la Alta Comisionada de las Naciones Unidas para los Derechos Humanos, Michelle Bachelet, lo que ha obligado al gobierno a pensar la política de represión implementada a través de este grupo comando e incluso del CICPC, cuerpo de investigación que se ha visto muy involucrado en casos de homicidios, sobre todo de ejecuciones extrajudiciales.
 
 (ref:sucesosmil) Número y proporción de sucesos asociados a muertes por intervención policial discriminados según el cuerpo de seguridad involucrado.
 
