--- a/book.bib
+++ b/book.bib
@@ -197,3 +197,12 @@ url = {https://dialnet.unirioja.es/servlet/articulo?codigo=5832797},
 year = {2016}
 }
 
+@misc{LACSO-OVV2020,
+author = {LACSO-OVV},
+booktitle = {Informe Anual de Violencia},
+mendeley-groups = {OVV},
+title = {{Informe Anual de Violencia 2020 – Entre las epidemias de la Violencia y del Covid-19 - Observatorio Venezolano de Violencia}},
+url = {https://observatoriodeviolencia.org.ve/news/informe-anual-de-violencia-2020-entre-las-epidemias-de-la-violencia-y-del-covid-19/},
+urldate = {2021-10-26},
+year = {2020}
+}
