--- a/05-conclusiones.Rmd
+++ b/05-conclusiones.Rmd
@@ -6,8 +6,6 @@ Se hace necesario, la re-construcción de la ciudadanía, que en parte hemos per
 
 Como ciudadanos estamos llamados a demandar del Estado y el gobierno el diseño de las políticas sociales, no sólo para brindar seguridad ciudadana, sino también para garantizar los derechos humanos de las personas a vivir, a vivir con salud, bien alimentados, con educación, en libertad, que sin duda son algunos de los referentes que garantizan un Estado de derecho.
 
-Ante las diversas manifestaciones o rostros de la violencia, sobre todo ante la violencia estructural, los ciudadanos debemos ser firmes y optimistas en la búsqueda de soluciones positivas. Conocemos las dificultades existentes no solo por la coyuntura político económico social derivada del estilo de gobierno, sino también de las medidas que exigen la cuarentena por la presencia del covid-19. Todo ello ha mermado la vida cotidiana de niños y adultos, modificando rutinas y añadiendo factores de estrés y factores de riesgo de la violencia. De acuerdo al rol o al lugar que toque vivir en sociedad, es posible hacer una mayor contribución a la problemática. A unos tocará hacer frente a factores más subjetivos como valores, actitudes, intereses individuales o grupales, odios, resentimientos, donde instituciones como la familia, la escuela, la iglesia pueden hacer aportes progresivos. Otros, deberán lidiar con factores más objetivos relacionados con condiciones socioeconómicas relacionados con la violencia tales como: la pobreza, las desigualdades sociales, la discriminación, la falta de servicios públicos y del aprovechamiento de recursos de un grupo en detrimento de otros, donde las instituciones públicas y la empresa privada tienen mucho que aportar. Esto no quiere decir que los primeros sean ajenos a los segundos, ni viceversa. Es que las acciones o soluciones estén acordes a los contextos y espacios que maneja cada quien, bajo conocimiento de las condiciones, leyes, marcos institucionales y elementos culturales que puedan hacer frente a la violencia, cualquiera sea su expresión.
+Ante las diversas manifestaciones o rostros de la violencia, sobre todo ante la violencia estructural, y ante la creciente manifestación de delitos contra niños, niñas y adolescentes, los ciudadanos debemos ser firmes y optimistas en la búsqueda de soluciones positivas. Conocemos las dificultades existentes no solo por la coyuntura político económico social derivada del estilo de gobierno, sino también de las medidas que exigen la cuarentena por la presencia del covid-19. Todo ello ha mermado la vida cotidiana de niños y adultos, modificando rutinas y añadiendo factores de estrés y factores de riesgo de la violencia. 
 
-
-
-
+De acuerdo al rol o al lugar que toque vivir en sociedad, es posible hacer una mayor contribución a la problemática. A unos tocará hacer frente a factores más subjetivos como valores, actitudes, intereses individuales o grupales, odios, resentimientos, donde instituciones como la familia, la escuela, la iglesia pueden hacer aportes progresivos. Otros, deberán lidiar con factores más objetivos relacionados con condiciones socioeconómicas relacionados con la violencia tales como: la pobreza, las desigualdades sociales, la discriminación, la falta de servicios públicos y del aprovechamiento de recursos de un grupo en detrimento de otros, donde las instituciones públicas y la empresa privada tienen mucho que aportar. Esto no quiere decir que los primeros sean ajenos a los segundos, ni viceversa. Es que las acciones o soluciones estén acordes a los contextos y espacios que maneja cada quien, bajo conocimiento de las condiciones, leyes, marcos institucionales y elementos culturales que puedan hacer frente a la violencia, cualquiera sea su expresión.
