--- a/03-noletal.Rmd
+++ b/03-noletal.Rmd
@@ -1,8 +1,8 @@
 # Violencia no letal
 
-## Otros delitos distintos a homicido intencional (HI)
+## Otros delitos distintos a homicidio intencional (HI)
 
-En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, son las mujeres las más afectadas (gráfico \@ref(fig:victimasdelhisexoedadpir)), sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Entre los hombres, es el grupo de hombres entre 11 y 40 años quienes son víctimas de estos delitos.
+En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, llama la atención el número de víctimas reportadas en la prensa que alcanzaron un total de 1.318, de las cuales sólo en 643 casos se pudo conocer la edad y sexo de las víctimas. Puede apreciarse en el gráfico \@ref(fig:victimasodelsexoedadpir) que son las mujeres las más afectadas, sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Sin duda son grupos vulnerables de este tipo de delitos, sobre todo si se trata de agresiones y violaciones sexuales, hechos que al parecer han venido en crecimiento, sobre todo en niñas, niños y adolescentes, por las condiciones de encierro que ha impuesto la pandemia por el covid-19 y que pone a las víctimas en mayor contacto y permanencia con sus agresores. Entre el sexo masculino, es el grupo entre 11 y 40 años quienes son víctimas de estos delitos, si consideramos que, por un lado, incluye a los menores quienes  también sufren agresiones y violencia sexual y los mayores que están expuestas a otros tipos de delitos producto de las actividades lícitas o ilícitas en las cuales se ven involucrados.
 
 ```{r victimasodelpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasodel_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
@@ -20,7 +20,7 @@ source("victimasexodel_actividad_piramide.R", echo = F,local = knitr::knit_globa
 
 (ref:victimasodeledadsexo) Número víctimas de otros delitos distintos a homicidio intencional discriminados por edad y sexo.
 
-```{r victimasodelsexoedadpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasdeledadsexo)'}
+```{r victimasodelsexoedadpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodeledadsexo)'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasodel_piramide.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -28,7 +28,7 @@ knitr::include_graphics(c("images/victimasodel_piramide.png"))
 # plot(sucesospol_barras)
 ```
 
-De los delitos diferentes al homicidio intencional, en los más de 500 sucesos informados por la prensa durante el semestre, son las agresiones graves y leves las más frecuentes (34%), seguidas del robo (27%). Son los delitos menos frecuentes las amenazas de agresión y las desapariciones forzadas.
+Por información conocida por la prensa durante el primero semestre del 2021, de los 497 delitos diferentes al homicidio intencional donde se dio a conocer el tipo de delito cometido, son las agresiones graves y leves las más frecuentes (34%), seguidas del robo (27%) (Gráfico \@ref(fig:sucesosodeltipodel)). Acentuando lo descrito en el gráfico anterior en cuanto a la vulnerabilidad de grupos por sexo a ciertos delitos, además de que son delitos no letales que suelen ser cometidos por delincuencia común y que responden a la situación socioeconómica que se vive en el país. Son los delitos menos frecuentes las amenazas de agresión y las desapariciones forzadas.
 
 (ref:sucesosodeltipodelito) Número y proporción de sucesos asociados a otros delitos distintos de homicidio intencional discriminados según el tipo de delito.
 
@@ -45,7 +45,7 @@ knitr::include_graphics(c("images/sucesosotrosdel_barras.png"))
 source("victimasodel_sexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como lo mencionamos en la gráfica \@ref(fig:sucesosodeltipodel) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino. Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales.
+Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como se mencionó en el Gráfico \@ref(fig:sucesosodeltipodel) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino (Gráfico \@ref(fig:victimasodelsexotipodelpir)). Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales, como ya fue mencionado, las explicaciones a este comportamiento del delito está relacionado con los roles que socialmente cumplen tanto como hombres como mujeres fuera y dentro del hogar respectivamente.
 
 (ref:victimasodelsexotipodel) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y tipo de delito.
 
@@ -57,7 +57,7 @@ knitr::include_graphics(c("images/victimasexotrosdel_graf.png"))
 # plot(sucesospol_barras)
 ```
 
-De las víctimas de delitos distintos al homicidio, en el caso de los hombres son fundamentalmente trabajadores, y en menor proporción estudiantes. Son las mujeres estudiantes las más afectadas por este tipo de delitos y menor número de trabajadoras.
+De las víctimas de delitos distintos al homicidio, en el caso de los hombres, son fundamentalmente trabajadores, y en menor proporción estudiantes (Gráfico \@ref(fig:victimasodelsexoactivpir)). Son las mujeres estudiantes las más afectadas por este tipo de delitos y menor número de trabajadoras. Este comportamiento del delito de acuerdo con el tipo de víctima parece responder a los factores de riesgo y a la vulnerabilidad de estos grupos para ser escogidos por sus agresores. A los factores de riesgo en el caso de las mujeres estudiantes porque, por lo general, son grupos jóvenes que se mueven en espacios abiertos bien en su centro de estudio, como en espacios de traslado que las hace vulnerable a la delincuencia común para ser despojadas de sus pertenencias y ser agredidas sexualmente. En el caso de los hombres se trata de hombres trabajadores que son vulnerables de delitos tanto en los lugares del trayecto a sus sitios de trabajo desde su casa y viceversa, y a las posibilidades de ser privados de pertenencias y dinero producto de su trabajo.
 
 (ref:victimasodelsexoactiv) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y actividad a la que se dedica la víctima.
 
@@ -71,7 +71,7 @@ knitr::include_graphics(c("images/victimasexodelactiv_graf.png"))
 
 ## Víctimas de agresión
 
-En los casos conocidos de víctimas por agresión, es notable que las mujeres son victimizadas principalmente por motivaciones basadas en género y otras causas; mientras que los hombres son víctimas debido a riñas, provecho ilícito y otras causas no especificadas. En ambos sexos, motivaciones como ajuste de cuentas, prejuicios o venganzas son numéricamente muy inferiores (gráfico \@ref(fig:victimasagresiondelmotivpir)).
+En los casos conocidos por la prensa de víctimas por agresión durante el primer trimestre del 2021, es notable que las mujeres son victimizadas principalmente por motivaciones basadas en género y otras causas; mientras que los hombres son víctimas debido a riñas, provecho ilícito y otras causas no especificadas (gráfico \@ref(fig:victimasagresiondelmotivpir)). En ambos sexos, motivaciones como ajuste de cuentas, prejuicios o venganzas son numéricamente muy inferiores. Estos datos son significativos, porque permiten pensar en que el aumento de las referencias en prensa de victimización de mujeres por razones de género, durante el primer semestre del año 2021, no sólo responde a los roles que tradicionalmente han desempeñado hombres y mujeres dentro de una relación de poder donde los  primeros ejercen poder sobre las segundas, sino también al cambio que han venido experimentado esos roles, en tanto que el carácter sexista de pensamiento de algunos hombres, al verse amenazado por la incursión de mujeres en otros ámbitos o su desarrollo en otros niveles, pueden utilizar la violencia para recuperar ese poder que sienten perdido. De esta forma, la violencia se convierte en una herramienta de control del poder amenazado o como un medio de recuperarlo, ya que no comprenden o no aceptan las relaciones de género en términos de igualdad.
 
 ```{r victiagresexopiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasagresiondel_sexo_piramide.R", echo = F,local = knitr::knit_global())
@@ -92,7 +92,7 @@ knitr::include_graphics(c("images/victimasagresiondelmotiv_pir.png"))
 # plot(sucesospol_barras)
 ```
 
-De acuerdo con los roles socialmente desempeñados por ambos sexos, la gráfica \@ref(fig:victimasagresiondeldondepir) muestra como las mujeres son víctimas de delitos diferentes de homicidio fundamentalmente en el hogar, mientras que los hombres están más expuestos a delitos en espacios abiertos o en la calle. Aunque el hogar y las prisiones o instituciones penales son lugares donde también los hombres son victimizados.
+Como se ha venido afirmando, de acuerdo con los roles socialmente desempeñados por ambos sexos, el Gráfico \@ref(fig:victimasagresiondeldondepir) muestra como las mujeres son víctimas de delitos diferentes de homicidio fundamentalmente en el hogar, mientras que los hombres están más expuestos a delitos en espacios abiertos o en la calle. Aunque el hogar y las prisiones o instituciones penales son lugares donde también los hombres son victimizados. Esto obviamente responde a que el espacio del delito en el caso de las mujeres es el sitio donde fundamentalmente ejercen sus funciones de ama de casa, madre, esposa, e incluso dada la pandemia hay quienes han llevado su trabajo remunerado a casa, lo que las hace susceptible de ser víctimas de delitos en el hogar. Eso sin mencionar que si otros miembros de la familia llevan también su trabajo a casa, lo hace un espacio posible para conflictos intrafamiliares que terminan en violencia. El sexo masculino por su parte, es quien mayormente ejerce su trabajo fuera de casa, en espacios abiertos y está expuesto a las motivaciones de delincuentes o bandas de delincuenciales, incluso de organismos policiales. 
 
 (ref:victimasagresiondelsexodonde) Número víctimas de agresión discriminados según sexo y por el lugar donde ocurrió el delito.
 
