--- a/index.Rmd
+++ b/index.Rmd
@@ -12,10 +12,16 @@ biblio-style: apalike
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 description: ""
-cover-image: "images/cover.jpg"
+cover-image: "images/PORTADA_BOLETIN_ADRIAN.jpg"
 
 
 ---
+```{r officedown, include=FALSE}
+library(officedown)
+library(officer)
+library(rvg)
+```
+
 <!-- ```{=openxml} -->
 <!-- <w:p><w:r><w:br w:type="page"/></w:r></w:p> -->
 <!-- ``` -->
@@ -42,7 +48,7 @@ cover-image: "images/cover.jpg"
 <!-- ``` -->
 
 ```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html'), fig.link='https://observatoriodeviolencia.org.ve/news/informe-semestral-regional-de-violencia-2021-guarico/'}
-knitr::include_graphics('images/cover.jpg', dpi = NA)
+knitr::include_graphics('images/PORTADA_BOLETIN_ADRIAN.jpg', dpi = NA)
 ```
 
 
