--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,4 +1,7 @@
+
 # Lo observado 
+
+<!---BLOCK_MULTICOL_START--->
 
 La observación y análisis de los datos obtenidos por el Observatorio de Prensa, de las noticias aparecidas en los medios consultados en el primer semestre del año 2021, permiten presentar las diferentes expresiones de la violencia interpersonal y su caracterización, como parte de los cambios sociales que experimenta la sociedad venezolana, debido a la situación económica, política y a aquellos generados por la pandemia producida por la presencia del covid-19.
 
@@ -7,3 +10,6 @@ Esta caracterización muestra tendencias que hacen pensar en algunos cambios que
 Las medidas de confinamiento y desmovilización de la población, han hecho lo propio para propiciar el recrudecimiento de los conflictos familiares, lo que ha afectado las relaciones entre sus miembros, al punto de incitar hechos de violencia que prácticamente mantiene en convivencia al sexo femenino con su principales victimarios que son miembros de la familia, siendo en la mayoría de los casos esposo, ex esposo, padres, abuelos, aumentando los casos reportados de feminicidios, así como violaciones y agresiones sexuales. Aunado a ello existe desconocimiento por un lado, y falta de apoyo por el otro, a las víctimas de estos delitos, que hacen más difícil el control y registro de este tipo de delitos.
 
 Una hipótesis para explicar estas tendencias en el comportamiento de la violencia, que apunta hacia el incremento de casos de violencia que ocurren en ambientes cerrados y privados y disminución de hechos violentos en lugares abiertos y públicos, sin duda tiene que ver, a pesar de los conflictos sociales e inestabilidad política, con factores como la migración de venezolanos a otros países, la destrucción de la economía y del trabajo, las medidas de confinamiento producto de la cuarentena por la pandemia del covid-19, la reducción de delincuentes producto de acciones extrajudiciales por parte de organismos de seguridad, las oportunidades de delitos a pequeñas escalas y más discretas dada la dolarización de actividades económicas, tanto en pequeños comercios como en la economía informal [@LACSO-OVV2020]. A todo ello se suma la violencia estructural producida por la precariedad de los servicios públicos y las acciones de omisión y ausencia de políticas públicas que profundizan la crisis humanitaria y viola los derechos humanos de los ciudadanos.
+
+<!---BLOCK_MULTICOL_STOP{widths: [3,3], space: 0.2, sep: true}--->
+
