--- a/03-noletal.Rmd
+++ b/03-noletal.Rmd
@@ -2,6 +2,9 @@
 
 ## Otros delitos distintos a homicidio intencional (HI)
 
+<!---BLOCK_MULTICOL_START--->
+
+
 En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, llama la atención el número de víctimas reportadas en la prensa que alcanzaron un total de 1.318, de las cuales sólo en 643 casos se pudo conocer la edad y sexo de las víctimas. Puede apreciarse en el gráfico \@ref(fig:victimasodelsexoedadpir) que son las mujeres las más afectadas, sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Sin duda son grupos vulnerables de este tipo de delitos, sobre todo si se trata de agresiones y violaciones sexuales, hechos que al parecer han venido en crecimiento, sobre todo en niñas, niños y adolescentes, por las condiciones de encierro que ha impuesto la pandemia por el covid-19 y que pone a las víctimas en mayor contacto y permanencia con sus agresores. Entre el sexo masculino, es el grupo entre 11 y 40 años quienes son víctimas de estos delitos, si consideramos que, por un lado, incluye a los menores quienes  también sufren agresiones y violencia sexual y los mayores que están expuestas a otros tipos de delitos producto de las actividades lícitas o ilícitas en las cuales se ven involucrados.
 
 ```{r victimasodelpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
@@ -69,7 +72,14 @@ knitr::include_graphics(c("images/victimasexodelactiv_graf.png"))
 # plot(sucesospol_barras)
 ```
 
+
+<!---BLOCK_MULTICOL_STOP{widths: [3,3], space: 0.2, sep: true}--->
+
+
 ## Víctimas de agresión
+
+<!---BLOCK_MULTICOL_START--->
+
 
 En los casos conocidos por la prensa de víctimas por agresión durante el primer trimestre del 2021, es notable que las mujeres son victimizadas principalmente por motivaciones basadas en género y otras causas; mientras que los hombres son víctimas debido a riñas, provecho ilícito y otras causas no especificadas (gráfico \@ref(fig:victimasagresiondelmotivpir)). En ambos sexos, motivaciones como ajuste de cuentas, prejuicios o venganzas son numéricamente muy inferiores. Estos datos son significativos, porque permiten pensar en que el aumento de las referencias en prensa de victimización de mujeres por razones de género, durante el primer semestre del año 2021, no sólo responde a los roles que tradicionalmente han desempeñado hombres y mujeres dentro de una relación de poder donde los  primeros ejercen poder sobre las segundas, sino también al cambio que han venido experimentado esos roles, en tanto que el carácter sexista de pensamiento de algunos hombres, al verse amenazado por la incursión de mujeres en otros ámbitos o su desarrollo en otros niveles, pueden utilizar la violencia para recuperar ese poder que sienten perdido. De esta forma, la violencia se convierte en una herramienta de control del poder amenazado o como un medio de recuperarlo, ya que no comprenden o no aceptan las relaciones de género en términos de igualdad.
 
@@ -104,3 +114,4 @@ knitr::include_graphics(c("images/victimasagresiondonde_grafico.png"))
 # plot(sucesospol_barras)
 ```
 
+<!---BLOCK_MULTICOL_STOP{widths: [3,3], space: 0.2, sep: true}--->
